--- a/story/Index.html
+++ b/story/Index.html
@@ -11,7 +11,7 @@
     <!-- playground-hide-end -->
 
     
-    <script type="module" src="./Untitled-1.js"></script>
+    <script type="module" src="Untitled-1.js"></script>
 	<style>
     h1 { 
       text-align: center;
