--- a/story/Index.html
+++ b/story/Index.html
@@ -3,13 +3,13 @@
     <title>New York Road Trip</title>
     <script src="Untitled-1.js"></script>
    
-    <script>
+<!--     <script>
       const process = { env: {} };
       process.env.GOOGLE_MAPS_API_KEY =
         "AIzaSyCM-WWHYHIKY-do4kquMy9Z4wQaQx51AuE";
     </script>
     
-
+ -->
     
     <script type="module" src="Untitled-1.js"></script>
 <style>
@@ -42,7 +42,7 @@ body {
 
 
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCM-WWHYHIKY-do4kquMy9Z4wQaQx51AuE&callback=initMap&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDv3MGflguusDaLmV_-BUlmuoUI4EbM88w&callback=initMap&v=weekly"
       defer
     ></script>
   </body>
