--- a/story/mystory.html
+++ b/story/mystory.html
@@ -13,6 +13,12 @@
     
     <script type="module" src="Untitled-1.js"></script>
 <style>
+.mytext {
+	font-family: "Times New Roman", Times, serif;
+	text-align: left;
+	position: absolute;
+	left: auto;
+}
 h1 { 
       	text-align: center;
 	font-family: "Times New Roman", Times, serif;
@@ -39,6 +45,9 @@ body {
   </head>
   <body>
     <h1>Road Trip to New York</h1>
+    <div class="mytext">
+	<p>This div element has position: absolute and left: auto.</p>
+    </div>
     <div id="map"></div>
 
 
