--- a/services/simplemap.html
+++ b/services/simplemap.html
@@ -26,8 +26,8 @@
 
       function initMap() {
         map = new google.maps.Map(document.getElementById("map"), {
-          center: { lat: -34.397, lng: 150.644 },
-          zoom: 8,
+          center: { lat: 43.8198113, lng: -79.261533 },
+          zoom: 13,
         });
       }
     </script>
