--- a/story/mystory.html
+++ b/story/mystory.html
@@ -17,7 +17,7 @@
 	font-family: "Times New Roman", Times, serif;
 	text-align: left;
 	position: absolute;
-	left: auto;
+	left: 40px;
 	bottom: 20px;
 	right: 100px;
 }
