--- a/story/mystory.html
+++ b/story/mystory.html
@@ -48,7 +48,7 @@ body {
   <body>
     <h1>Road Trip to New York</h1>
     <div class="mytext">
-	<p>This div element has position: absolute and left: auto.</p>
+	<p>My road trip to New York contains several places I would like to visit in a day. I would like to go to Times Square, The Empire State Building, 2 Bros Pizza, and Katz’s Delicatessen. Katz’s Delicatessen is the last destination for the day during the week I’m staying in New York because Katz’s Delicatessen is a place where a lot of movies were filmed and also, they are well known for their pastrami and rye bread. However, before going to Katz’s Delicatessen, I want to understand the hype around dollar pizza, which I want to try at 2 Bros pizza. </p>
     </div>
     <div id="map"></div>
 
