--- a/story/mystory.html
+++ b/story/mystory.html
@@ -17,7 +17,7 @@
 	font-family: "Times New Roman", Times, serif;
 	text-align: left;
 	position: absolute;
-	left: 50;
+	left: 100px;
 	bottom: 0px;
 	right: 150px;
 }
