--- a/story/mystory.html
+++ b/story/mystory.html
@@ -1,4 +1,5 @@
   <html>
+<!-- Template referenced for the map: https://developers.google.com/maps/documentation/javascript/examples/advanced-markers-accessibility -->
   <head>
     <title>New York Road Trip</title>
     <script src="Untitled-1.js"></script>
@@ -21,11 +22,12 @@
 	bottom: 0px;
 	right: 150px;
 }
+/* The div has a text-align to the left and positioned to the left of the webpage */
 h1 { 
       	text-align: center;
 	font-family: "Times New Roman", Times, serif;
 }
-
+/* The heading is centered and have a font of Times New Roman */
     
 #map {
 	height: 70%;
@@ -41,6 +43,7 @@ body {
 	margin: 0;
 	padding: 0;
 }
+/* 	Background colour is brownish and orange colour */
 </style>
 
   </head>
