--- a/Display/pleasework.html
+++ b/Display/pleasework.html
@@ -1,3 +1,4 @@
+<!-- Reference of this code is from https://developers.arcgis.com/javascript/latest/tutorials/add-a-feature-layer/ --->
 <html>
 <head>
   <meta charset="utf-8">
@@ -10,6 +11,7 @@
       height: 100%;
       width: 100%;
     }
+/* The height and width is set 100% to take the whole web page  */
   </style>
   <link rel="stylesheet" href="https://js.arcgis.com/4.28/esri/themes/light/main.css">
   <script src="https://js.arcgis.com/4.28/"></script>
@@ -36,7 +38,7 @@
     center: [15.384636,43.978734],
     zoom: 17
   });
-
+// Center on the island shaped as a heart
 //Valentine feature layer (points)
   const valentine_points = new FeatureLayer({
     url: "https://services1.arcgis.com/pMeXRvgWClLJZr3s/arcgis/rest/services/Valentine/FeatureServer/0"
